[gd_scene load_steps=6 format=2]

[ext_resource path="res://sys/ui/wiringGrid/SlotProto.tscn" type="PackedScene" id=1]
[ext_resource path="res://gfx/ui/godot_icons/Sub.svg" type="Texture" id=2]
[ext_resource path="res://gfx/ui/godot_icons/Add.svg" type="Texture" id=3]
[ext_resource path="res://sys/ui/wiringGrid/SlotIndicator.gd" type="Script" id=5]
[ext_resource path="res://sys/ui/wiringGrid/WiringGrid.gd" type="Script" id=6]

[node name="WiringGrid" type="Control"]
margin_left = 608.0
margin_top = 96.0
margin_right = 832.0
margin_bottom = 320.0
rect_min_size = Vector2( 224, 224 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlotIndicator" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -32.0
margin_bottom = -32.0
rect_min_size = Vector2( 128, 128 )
custom_constants/vseparation = 1
custom_constants/hseparation = 1
columns = 4
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}
total_ops = 6

[node name="0" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_right = 47.0
margin_bottom = 47.0

[node name="1" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 48.0
margin_right = 95.0
margin_bottom = 47.0

[node name="2" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 96.0
margin_right = 143.0
margin_bottom = 47.0

[node name="3" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 144.0
margin_right = 191.0
margin_bottom = 47.0

[node name="4" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_top = 48.0
margin_right = 47.0
margin_bottom = 95.0

[node name="5" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 48.0
margin_top = 48.0
margin_right = 95.0
margin_bottom = 95.0

[node name="6" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 96.0
margin_top = 48.0
margin_right = 143.0
margin_bottom = 95.0

[node name="7" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 144.0
margin_top = 48.0
margin_right = 191.0
margin_bottom = 95.0

[node name="8" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_top = 96.0
margin_right = 47.0
margin_bottom = 143.0

[node name="9" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 48.0
margin_top = 96.0
margin_right = 95.0
margin_bottom = 143.0

[node name="10" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 96.0
margin_top = 96.0
margin_right = 143.0
margin_bottom = 143.0

[node name="11" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 144.0
margin_top = 96.0
margin_right = 191.0
margin_bottom = 143.0

[node name="12" parent="SlotIndicator" instance=ExtResource( 1 )]
self_modulate = Color( 0, 0.5, 1, 1 )
margin_top = 144.0
margin_right = 47.0
margin_bottom = 191.0
slot_type = 1

[node name="13" parent="SlotIndicator" instance=ExtResource( 1 )]
self_modulate = Color( 0, 0.5, 1, 1 )
margin_left = 48.0
margin_top = 144.0
margin_right = 95.0
margin_bottom = 191.0
slot_type = 1

[node name="14" parent="SlotIndicator" instance=ExtResource( 1 )]
self_modulate = Color( 0, 0.5, 1, 1 )
margin_left = 96.0
margin_top = 144.0
margin_right = 143.0
margin_bottom = 191.0
slot_type = 1

[node name="15" parent="SlotIndicator" instance=ExtResource( 1 )]
self_modulate = Color( 0, 0.5, 1, 1 )
margin_left = 144.0
margin_top = 144.0
margin_right = 191.0
margin_bottom = 191.0
slot_type = 1

[node name="Add" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -28.0
margin_top = 4.0
margin_bottom = 32.0
hint_tooltip = "Adds an operator to the wiring grid."
icon = ExtResource( 3 )
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Remove" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -28.0
margin_top = 38.0
margin_bottom = 66.0
hint_tooltip = "Removes an operator from the wiring grid."
icon = ExtResource( 2 )
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
editor_only = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="Remove" to="." method="_on_Remove_pressed"]
